# numx-subnet-commune

./: .gitignore  README.md  config.ini.example  ecosystem.config.js  pyproject.toml  test.sh
src/numenex/: cli.py  misc.py  numenex.py  settings.py  utils.py
src/numenex/miner/: num.py  numenex.py  numx.py  trade.py
src/numenex/validator/: numx.py  validator.py
src/numenex/validator/miner_verifier/: constants.py  few_shots_prompt.py  llm.py  main.py  utils.py
