[tool.poetry]
name = "numx-subnet-prod-v1"
version = "0.1.0"
description = ""
authors = ["NUMENEX"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
configparser = "^7.0.0"
communex = "^0.1.32"
loguru = "^0.7.2"
beautifulsoup4 = "^4.12.3"
langchain-openai = "^0.1.23"
langchain = "^0.2.15"
langchain-community = "^0.2.13"
tldextract = "^5.1.2"
langchain-groq = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
